# openai-sdk-rs

./: .env.example  .gitignore  .tasks.json  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  WORKFLOW_DEMO.md  deny.toml
.copilot/: README.md  ai-assistant-guide.md  context.json  quick-reference.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
docs/: DEVELOPMENT.md
examples/: chat.rs  chat_stream.rs  images.rs  responses.rs  responses_advanced.rs  responses_stream.rs  responses_tool_call.rs
scripts/: dev-workflow.sh  quick-release.sh  simple-check.sh  tasks.sh
src/: client.rs  error.rs  lib.rs  sse.rs  utils.rs
src/types/: chat.rs  embeddings.rs  files.rs  images.rs  mod.rs  responses.rs
tests/: integration_wire.rs  responses.rs  retry.rs
