[package]
name = "openai-sdk"
version = "0.1.0"
edition = "2021"
description = "Unofficial, minimal async OpenAI API client for Rust with support for Chat Completions, Embeddings, Responses API, and tool calling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neeboo/openai-sdk-rs"
homepage = "https://github.com/neeboo/openai-sdk-rs"
documentation = "https://docs.rs/openai-sdk"
keywords = ["openai", "api", "chat", "embeddings", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]
readme = "README.md"
authors = ["neeboo <ghostcorn@gmail.com>"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "*.env*",
    ".vscode/*"
]

# docs.rs 优化
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures-core = "0.3"
async-stream = "0.3"
dotenv = "0.15"

[dev-dependencies]
anyhow = "1"
wiremock = { version = "0.6" }
